--- a/index.html
+++ b/index.html
@@ -5,64 +5,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styleCards.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/estilos_scss.css">
 </head>
 <body>
-    <!--Aca empeiza el header-->
-    <header>
-        <div>            
-            <img src="images/logo_chico.JPG" alt="logo chico" title="logo chico">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/nosotros.html">Nosotros</a></li>
-                <li><a href="pages/bikes_for_sale.html">Bikes for Sale</a></li>
-                <li><a href="pages/kkulifestile.html">KKU Lifestile</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
-                <li><a href="pages/bikes_for_sale.html"><img src="images/carrito.JPG" alt="carrito" title="carrito"></a></li>
-            </ul>
-        </nav> 
-    </header>
-    <section>
-        <img src="images/logo_cuadrado.JPG" alt="logo cuadrado" title="logo cuadrado">
-        <h1>Bienvenidos a Kustom Kulture Motorcycles</h1>
-        <p>El buen gusto y el amor por los motores, se funden bajo tierra para hacer las mejores motos de la ciudad.</p><br>
-    </section>
-    <section>
-        <a href="pages/nosotros.html#nuestros proyectos"><h2>Custom Bikes</h2></a>
-        <img src="images/hondacgl.JPG" alt="carrete deslizable" title="carrete deslizable">
-        <button>Boton 1</button>
-        <h2>Honda CGL 125</h2>
-        <p>
-            Desarmamos las ruedas y cambiamos los aros por unos más anchos para ponerle cubiertas de mayor rodado,
-            el asiento y semi-manillares se fabricaron artesanalmente a la medida. Uno de los desafíos mas grandes 
-            en esta moto fue la fabricación del tanque para darle un aspecto retro a la moto, le adaptamos un tanque 
-            antiguo de gilera el cual cortamos en varias partes para achicarlo y darle la forma adecuada.
-        </p>
-    </section>
-    <section>
-        <h2><a href="pages/nosotros.html">Nosotros</a></h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lSbXSUFiV4g?start=37" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam harum dolorum cupiditate beatae architecto 
-            voluptatibus placeat maiores consectetur vitae nihil facere, temporibus sequi, repudiandae assumenda, quos 
-            impedit eos sit aspernatur quod expedita commodi eaque. At repudiandae ex obcaecati aut placeat.
-        </p>
-    </section>
-    <footer>
-        <div>
-            <a href="pages/contacto.html">Contacto</a>
-            <p>mail@kku.uy - +598 000 000</p>
-            <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="images/logoinsta.JPG" alt=""></a>
-            <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
-        </div>
-        <div>
-            <img src="images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
-        </div>
-        <div>
-            <p>BrainIT 2022 - Todos los derechos reservados</p>
-        </div>          
-    </footer>
+    <div class="container-fluid">
+        <!--Aca empeiza el header-->
+        <header>
+            <nav class="row navbar navbar-dark navbar-expand-md bg-black">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html"><img src="images/logo_chico.JPG" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="fs-4 nav justify-content-center m-auto">
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="pages/nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="pages/bikes_for_sale.html">Bikes For Sale</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="pages/kkulifestile.html">KKU Lifestile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="pages/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav> 
+        </header>
+        <section>
+            <img src="images/logo_cuadrado.JPG" alt="logo cuadrado" title="logo cuadrado">
+            <h1>Bienvenidos a Kustom Kulture Motorcycles</h1>
+            <p>El buen gusto y el amor por los motores, se funden bajo tierra para hacer las mejores motos de la ciudad.</p><br>
+        </section>
+        <section>
+            <a href="pages/nosotros.html#nuestros proyectos"><h2>Custom Bikes</h2></a>
+            <img src="images/hondacgl.JPG" alt="carrete deslizable" title="carrete deslizable">
+            <h2>Honda CGL 125</h2>
+            <p>
+                Desarmamos las ruedas y cambiamos los aros por unos más anchos para ponerle cubiertas de mayor rodado,
+                el asiento y semi-manillares se fabricaron artesanalmente a la medida. Uno de los desafíos mas grandes 
+                en esta moto fue la fabricación del tanque para darle un aspecto retro a la moto, le adaptamos un tanque 
+                antiguo de gilera el cual cortamos en varias partes para achicarlo y darle la forma adecuada.
+            </p>
+        </section>
+        <section>
+            <h2><a href="pages/nosotros.html">Nosotros</a></h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/lSbXSUFiV4g?start=37" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam harum dolorum cupiditate beatae architecto 
+                voluptatibus placeat maiores consectetur vitae nihil facere, temporibus sequi, repudiandae assumenda, quos 
+                impedit eos sit aspernatur quod expedita commodi eaque. At repudiandae ex obcaecati aut placeat.
+            </p>
+        </section>
+        <footer>
+            <div>
+                <a href="pages/contacto.html">Contacto</a>
+                <p>mail@kku.uy - +598 000 000</p>
+                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="images/logoinsta.JPG" alt=""></a>
+                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+            </div>
+            <div>
+                <img src="images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
+            </div>
+            <div>
+                <p>BrainIT 2022 - Todos los derechos reservados</p>
+            </div>          
+        </footer>
+    </div>
+    <script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
