--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -1,57 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>KKU - Bikes for Sale</title>
+    <title>KKU Bikes for Sale</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/estilos_scss.css">
 </head>
 <body>
-    <header>
-        <div>            
-            <img src="../images/logo_chico.JPG" alt="logo chico" title="logo chico">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="bikes_for_sale.html">Bikes for Sale</a></li>
-                <li><a href="kkulifestile.html">KKU Lifestile</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="bikes_for_sale.html"><img src="../images/carrito.JPG" alt="carrito" title="carrito"></a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <div>
-            <h2>Motos en Venta</h2>
-        </div>
-        <div>
-            <h2>Honda CB400</h2>
-            <img src="../images/hondaCb400.JPG" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
-            molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
-        </div>
-        <div>
-            <h2>Suzuki GS750</h2>
-            <img src="../images/suzukiGs750.JPG" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
-            molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
-        </div>
-    </section>
-    <footer>
-        <div>
-            <a href="contacto.html">Contacto</a>
-            <p>mail@kku.uy - +598 000 000</p>
-            <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
-            <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
-        </div>
-        <div>
-            <img src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
-        </div>
-        <div>
-            <p>BrainIT 2022 - Todos los derechos reservados</p>
-        </div>          
-    </footer>
+    <div class="container-fluid">
+        <header>
+            <nav class="row navbar navbar-dark navbar-expand-md bg-black">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html"><img src="../images/logo_chico.JPG" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="fs-4 nav justify-content-center m-auto">
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="bikes_for_sale.html">Bikes For Sale</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="kkulifestile.html">KKU Lifestile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <div>
+                <h2>Motos en Venta</h2>
+            </div>
+            <div>
+                <h2>Honda CB400</h2>
+                <img src="../images/hondaCb400.JPG" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
+                    molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.
+                </p>
+            </div>
+            <div>
+                <h2>Suzuki GS750</h2>
+                <img src="../images/suzukiGs750.JPG" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
+                    molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.
+                </p>
+            </div>
+        </section>
+        <footer>
+            <div>
+                <a href="contacto.html">Contacto</a>
+                <p>mail@kku.uy - +598 000 000</p>
+                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
+                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+            </div>
+            <div>
+                <img src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
+            </div>
+            <div>
+                <p>BrainIT 2022 - Todos los derechos reservados</p>
+            </div>          
+        </footer>
+    </div>
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
