--- a/pages/kkulifestile.html
+++ b/pages/kkulifestile.html
@@ -5,55 +5,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/estilos_scss.css">
 </head>
 <body>
-    <header>
-        <div>            
-            <img src="../images/logo_chico.JPG" alt="logo chico" title="logo chico">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="bikes_for_sale.html">Bikes for Sale</a></li>
-                <li><a href="kkulifestile.html">KKU Lifestile</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="bikes_for_sale.html"><img src="../images/carrito.JPG" alt="carrito" title="carrito"></a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <div>
-            <h2>KKU Lifestyle</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo asperiores fugit similique sequi corrupti. 
-            Mollitia laborum labore pariatur explicabo aliquam laudantium ullam magnam nemo beatae. Alias vero iusto repellat magnam!</p>
-        </div>
-    </section>
-    <section>        
-        <div>
-            <h2>Eventos & Rides</h2>
-            <img src="../images/eventos&rides.JPG" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reprehenderit molestiae inventore at praesentium magni 
-            illum ipsum sit voluptas, similique pariatur, ipsam delectus, dignissimos eius repellendus ducimus in fugit aliquid!</p>
-        </div>
-    </section>
-    <section>
-        <h2>Proximos Eventos</h2>
-        <iframe src="https://calendar.google.com/calendar/embed?src=es.uy%23holiday%40group.v.calendar.google.com&ctz=America%2FMontevideo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-    </section>
-    <footer>
-        <div>
-            <a href="contacto.html">Contacto</a>
-            <p>mail@kku.uy - +598 000 000</p>
-            <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
-            <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
-        </div>
-        <div>
-            <img src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
-        </div>
-        <div>
-            <p>BrainIT 2022 - Todos los derechos reservados</p>
-        </div>          
-    </footer>
+    <div class="container-fluid">
+        <header>
+            <nav class="row navbar navbar-dark navbar-expand-md bg-black">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html"><img src="../images/logo_chico.JPG" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="fs-4 nav justify-content-center m-auto">
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="bikes_for_sale.html">Bikes For Sale</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="kkulifestile.html">KKU Lifestile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <section>
+            <div>
+                <h2>KKU Lifestyle</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo asperiores fugit similique sequi corrupti. 
+                    Mollitia laborum labore pariatur explicabo aliquam laudantium ullam magnam nemo beatae. Alias vero iusto repellat magnam!
+                </p>
+            </div>
+        </section>
+        <section>        
+            <div>
+                <h2>Eventos & Rides</h2>
+                <img src="../images/eventos&rides.JPG" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reprehenderit molestiae inventore at praesentium magni 
+                    illum ipsum sit voluptas, similique pariatur, ipsam delectus, dignissimos eius repellendus ducimus in fugit aliquid!
+                </p>
+            </div>
+        </section>
+        <section>
+            <h2>Proximos Eventos</h2>
+            <iframe src="https://calendar.google.com/calendar/embed?src=es.uy%23holiday%40group.v.calendar.google.com&ctz=America%2FMontevideo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        </section>
+        <footer>
+            <div>
+                <a href="contacto.html">Contacto</a>
+                <p>mail@kku.uy - +598 000 000</p>
+                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
+                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+            </div>
+            <div>
+                <img src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
+            </div>
+            <div>
+                <p>BrainIT 2022 - Todos los derechos reservados</p>
+            </div>          
+        </footer>
+    </div>
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
