se agrega footer estilizado en todas las paginas, aun queda por estilizar

--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -60,19 +60,21 @@
                 </p>
             </div>
         </section>
-        <footer>
-            <div>
+        <footer class="row">
+            <div class="col-md-4">
                 <a href="contacto.html">Contacto</a>
-                <p>mail@kku.uy - +598 000 000</p>
-                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
-                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+                <p>mail@kku.uy - +598 000 000</p>                          
+                <div class="footerSocialIcons">
+                    <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/instaLogoWhite.png" alt="" ></a>
+                    <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logoFbWhite.png" alt="facebook footer" title="facebook footer"></a>
+                </div>
+            </div>  
+            <div class="col-md-4">
+                <img src="../images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
             </div>
-            <div>
-                <img src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
-            </div>
-            <div>
+            <div class="col-md-4">
                 <p>BrainIT 2022 - Todos los derechos reservados</p>
-            </div>          
+            </div>
         </footer>
     </div>
     <script src="../js/bootstrap.bundle.js"></script>
