--- a/pages/kkulifestile.html
+++ b/pages/kkulifestile.html
@@ -62,19 +62,21 @@
             <h2>Proximos Eventos</h2>
             <iframe src="https://calendar.google.com/calendar/embed?src=es.uy%23holiday%40group.v.calendar.google.com&ctz=America%2FMontevideo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </section>
-        <footer>
-            <div>
+        <footer class="row">
+            <div class="col-md-4">
                 <a href="contacto.html">Contacto</a>
-                <p>mail@kku.uy - +598 000 000</p>
-                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
-                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+                <p>mail@kku.uy - +598 000 000</p>                          
+                <div class="footerSocialIcons">
+                    <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/instaLogoWhite.png" alt="" ></a>
+                    <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logoFbWhite.png" alt="facebook footer" title="facebook footer"></a>
+                </div>
+            </div>  
+            <div class="col-md-4">
+                <img src="../images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
             </div>
-            <div>
-                <img src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
-            </div>
-            <div>
+            <div class="col-md-4">
                 <p>BrainIT 2022 - Todos los derechos reservados</p>
-            </div>          
+            </div>
         </footer>
     </div>
     <script src="../js/bootstrap.bundle.js"></script>
