quitado espacio entre footer y body de page contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
             </nav>
         </header>
         <!--Seccion Formulario de contacto-->
-        <section class="row background__contacto section__contacto mb-4">
+        <section class="row background__contacto section__contacto pb">
             <!--header de fromulario-->
             <h2 class="h2-responsive font-weight-bold text-center my-4">Contáctanos</h2>
             <!--Section description-->
